youtube/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bharathi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: veathalam.com     # Replace this with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bharathi-nodeport-service
            port:
              number: 80
      - path: /ss
        pathType: Prefix
        backend:
          service:
            name: gsjhdhs
            port:
              number: 80
